--- a/build.gradle
+++ b/build.gradle
@@ -5,14 +5,19 @@ buildscript {
 			name "Modmuss50 Repository"
 			url 'https://maven.modmuss50.me'
 		}
+		maven {
+			name "Jitpack"
+			url 'https://jitpack.io/'
+		}
 	}
 	dependencies {
 		classpath "net.fabricmc:weave:0.3.1.17+"
-		classpath "net.fabricmc:stitch:0.1.2.49"
+		classpath 'com.github.Chocohead:Stitch:7453a34'
 		classpath "commons-io:commons-io:1.4"
 		classpath "com.google.guava:guava:19.0"
 		classpath 'de.undercouch:gradle-download-task:3.4.3'
 		classpath 'net.fabricmc:tiny-remapper:+'
+		classpath 'com.github.Chocohead:tiny-mappings-parser:337c8b6'
 	}
 }
 
@@ -37,6 +42,10 @@ repositories {
 		name "Modmuss50 Repository"
 		url 'https://maven.modmuss50.me'
 	}
+	maven {
+		name "Jitpack"
+		url 'https://jitpack.io/'
+	}
 }
 
 configurations {
@@ -49,15 +58,16 @@ configurations {
 }
 
 dependencies {
-	enigmaRuntime "net.fabricmc:stitch:0.1.1.39+"
+	enigmaRuntime 'com.github.Chocohead:Stitch:7453a34'
 	enigmaRuntime "cuchaz:enigma:0.13.1.99:all"
 }
 
 def mappingsDir = file("mappings")
 def cacheFilesMinecraft = file(".gradle/minecraft")
 def tempDir = file(".gradle/temp")
-def mergedFile = file("${minecraft_version}-merged.jar")
-def intermediaryJar = file("${minecraft_version}-intermediary.jar")
+def mergedJar = file("${minecraft_version}-merged.jar")
+def clientIntermediaryJar = new File(cacheFilesMinecraft, "${minecraft_version}-client-intermediary.jar")
+def serverIntermediaryJar = new File(cacheFilesMinecraft, "${minecraft_version}-server-intermediary.jar")
 def namedJar = file("${minecraft_version}-named.jar")
 def versionFile = new File(cacheFilesMinecraft, "${minecraft_version}.json")
 def clientJar = new File(cacheFilesMinecraft, "${minecraft_version}-client.jar")
@@ -77,6 +87,14 @@ import net.fabricmc.tinyremapper.TinyRemapper
 import net.fabricmc.tinyremapper.TinyUtils
 import net.fabricmc.weave.CommandFindMappingErrors
 import net.fabricmc.weave.CommandTinyify
+import net.fabricmc.mappings.ClassEntry
+import net.fabricmc.mappings.MethodEntry
+import net.fabricmc.mappings.FieldEntry
+import net.fabricmc.mappings.EntryTriple
+import net.fabricmc.mappings.Mappings
+import net.fabricmc.mappings.MappingsProvider
+import net.fabricmc.tinyremapper.IMappingProvider
+import net.fabricmc.tinyremapper.MemberInstance
 import groovy.io.FileType
 import java.util.zip.GZIPOutputStream
 
@@ -167,24 +185,85 @@ task downloadMcJars(dependsOn: downloadWantedVersionManifest) {
 	}
 }
 
-task mergeJars(dependsOn: downloadMcJars) {
-//	inputs.files downloadMcJars.outputs.files.files
-//	outputs.file(mergedFile)
-//
-//	doLast {
-//		logger.lifecycle(":merging jars")
-//		def client = inputs.files.files.find {it.name.endsWith("-client.jar")}
-//		def server = inputs.files.files.find {it.name.endsWith("-server.jar")}
-//		def merged = mergedFile
-//
-//		if(merged.exists()){
-//			return
-//		}
-//
-//		def jarMerger = new JarMerger(client, server, merged)
-//		jarMerger.merge()
-//		jarMerger.close()
-//	}
+task downloadMcLibs(dependsOn: downloadWantedVersionManifest) {
+	inputs.files versionFile
+
+	outputs.file(libraries)
+
+	outputs.upToDateWhen {
+		return false
+	}
+
+	doLast {
+		if (!versionFile.exists()) {
+			throw new RuntimeException("Can't download the jars without the ${versionFile.name} file!")
+		}
+
+		def version = new JsonSlurper().parseText(FileUtils.readFileToString(versionFile))
+
+		logger.lifecycle(":downloading minecraft libraries")
+
+		if (!libraries.exists()) {
+			libraries.mkdirs()
+		}
+
+		version.libraries.each {
+			def downloadUrl = it.downloads?.artifact?.url
+			if (downloadUrl == null) return
+
+			download {
+				src downloadUrl
+				dest new File(libraries, downloadUrl.substring(downloadUrl.lastIndexOf("/") + 1))
+				overwrite false
+			}
+		}
+	}
+}
+
+task downloadIntermediary(type: Download) {
+	//TODO: Don't hardcode me to just 1.2.5 Intermediaries
+	def url = "https://gist.githubusercontent.com/Chocohead/b7ea04058776495a93ed2d13f34d697a/raw/bef98dbb28979eba29df67d4182fb8cf291d55f2/1.2.5 Merge.tiny"
+	src url.replaceAll(" ", "%20")
+	dest new File(cacheFilesMinecraft, "${minecraft_version}-intermediary.tiny")
+}
+
+task remapClientJar(dependsOn: [downloadMcJars, downloadMcLibs, downloadIntermediary]) {
+	inputs.file clientJar
+	inputs.files downloadMcLibs.outputs.files.files
+	outputs.file clientIntermediaryJar
+
+	doLast {
+		logger.lifecycle(":mapping client to intermediary")
+		mapJar(clientIntermediaryJar, clientJar, downloadIntermediary.dest, libraries, "client", "intermediary")
+	}
+}
+
+task remapServerJar(dependsOn: [downloadMcJars, downloadMcLibs, downloadIntermediary]) {
+	inputs.file serverJar
+	inputs.files downloadMcLibs.outputs.files.files
+	outputs.file serverIntermediaryJar
+
+	doLast {
+		logger.lifecycle(":mapping server to intermediary")
+		mapJar(serverIntermediaryJar, serverJar, downloadIntermediary.dest, libraries, "server", "intermediary")
+	}
+}
+
+task mergeJars(dependsOn: [remapClientJar, remapServerJar]) {
+	inputs.files([clientIntermediaryJar, serverIntermediaryJar])
+	outputs.file(mergedJar)
+
+	doLast {
+		logger.lifecycle(":merging jars")
+
+		if (mergedJar.exists()) {
+			return
+		}
+
+		def jarMerger = new JarMerger(clientIntermediaryJar, serverIntermediaryJar, mergedJar)
+		jarMerger.merge()
+		jarMerger.close()
+	}
 
 }
 
@@ -201,7 +280,7 @@ task yarn(dependsOn: setupYarn) {
 			spawn: true
 		) {
 			jvmarg(value: "-Xmx2048m")
-			arg(value: clientJar.getAbsolutePath())
+			arg(value: mergedJar.getAbsolutePath())
 			arg(value: mappingsDir.getAbsolutePath())
 		}
 	}
@@ -226,12 +305,6 @@ task checkMappings {
 
 		new CommandFindMappingErrors().run(args)
 	}
-}
-
-task downloadIntermediary(type: Download) {
-	def url = "https://github.com/FabricMC/intermediary/raw/master/mappings/${minecraft_version}.tiny"
-	src url.replaceAll(" ", "%20")
-	dest new File(cacheFilesMinecraft, "${minecraft_version}-intermediary.tiny")
 }
 
 task patchIntermediary(dependsOn: ["mergeJars", "downloadIntermediary"], type: FileOutput) {
@@ -353,41 +426,7 @@ tasks.build.dependsOn "compressTiny"
 tasks.build.dependsOn "buildEnigma"
 tasks.build.dependsOn "tinyJar"
 
-task downloadMcLibs(dependsOn: downloadWantedVersionManifest) {
-	inputs.files versionFile
-
-	outputs.file(libraries)
-
-	outputs.upToDateWhen {
-		return false
-	}
-
-	doLast {
-		if (!versionFile.exists()) {
-			throw new RuntimeException("Can't download the jars without the ${versionFile.name} file!")
-		}
-
-		def version = new JsonSlurper().parseText(FileUtils.readFileToString(versionFile))
-
-		logger.lifecycle(":downloading minecraft libraries")
-
-		if (!libraries.exists()) {
-			libraries.mkdirs()
-		}
-
-		version.libraries.each {
-			def downloadUrl = it.downloads.artifact.url
-
-			download {
-				src downloadUrl
-				dest new File(libraries, downloadUrl.substring(downloadUrl.lastIndexOf("/") + 1))
-				overwrite false
-			}
-		}
-	}
-}
-
-task mapIntermediaryJar(dependsOn: [downloadMcLibs, build]) {
+/*task mapIntermediaryJar(dependsOn: [downloadMcLibs, build]) {
 	inputs.files downloadMcLibs.outputs.files.files
 	outputs.file(intermediaryJar)
 
@@ -401,9 +440,9 @@ task mapIntermediaryJar(dependsOn: [downloadMcLibs, build]) {
 		def tinyInput = new File("build/libs/yarn-tiny-${yarnVersion}.gz")
 		mapJar(intermediaryJar, clientJar, tinyInput, libraries, "official", "intermediary")
 	}
-}
+}*/
 
-task mapNamedJar(dependsOn: mapIntermediaryJar) {
+task mapNamedJar(dependsOn: mergeJars) {
 	inputs.files downloadMcLibs.outputs.files.files
 	outputs.file(namedJar)
 
@@ -416,7 +455,7 @@ task mapNamedJar(dependsOn: mapIntermediaryJar) {
 		logger.lifecycle(":mapping minecraft to named")
 
 		def tinyInput = new File("build/libs/yarn-tiny-${yarnVersion}.gz")
-		mapJar(namedJar, intermediaryJar, tinyInput, libraries, "intermediary", "named")
+		mapJar(namedJar, mergedJar, tinyInput, libraries, "intermediary", "named")
 	}
 }
 
@@ -450,6 +489,26 @@ publishing {
 	}
 }
 
+IMappingProvider createMappingsProvider(input, from, to) {
+	Mappings mappings = MappingsProvider.readTinyMappings(java.nio.file.Files.newInputStream(input), false)
+	return {classMap, fieldMap, methodMap -> 
+		for (ClassEntry entry : mappings.getClassEntries()) {
+			classMap.put(entry.get(from), entry.get(to));
+		}
+
+		for (FieldEntry entry : mappings.getFieldEntries()) {
+			EntryTriple fromTriple = entry.get(from);
+			if (fromTriple == null) continue;
+			fieldMap.put(fromTriple.getOwner() + "/" + MemberInstance.getFieldId(fromTriple.getName(), fromTriple.getDesc()), entry.get(to).getName());
+		}
+
+		for (MethodEntry entry : mappings.getMethodEntries()) {
+			EntryTriple fromTriple = entry.get(from);
+			if (fromTriple == null) continue;
+			methodMap.put(fromTriple.getOwner() + "/" + MemberInstance.getMethodId(fromTriple.getName(), fromTriple.getDesc()), entry.get(to).getName());
+		}
+	};
+}
 
 void mapJar(File output, File input, File mappings, File libraries, String from, String to) {
 	if (output.exists()) {
@@ -457,7 +516,7 @@ void mapJar(File output, File input, File mappings, File libraries, String from,
 	}
 
 	def remapper = TinyRemapper.newRemapper()
-		.withMappings(TinyUtils.createTinyMappingProvider(mappings.toPath(), from, to))
+		.withMappings(createMappingsProvider(mappings.toPath(), from, to))
 		.renameInvalidLocals(true)
 		.rebuildSourceFilenames(true)
 		.build()
