--- a/build.gradle
+++ b/build.gradle
@@ -11,10 +11,10 @@ buildscript {
 		}
 	}
 	dependencies {
-		classpath "net.fabricmc:weave:0.3.1.17+"
-		classpath 'com.github.Chocohead:Stitch:7453a34'
-		classpath "commons-io:commons-io:1.4"
-		classpath "com.google.guava:guava:19.0"
+		classpath "cuchaz:enigma:0.14.1.130"
+		classpath 'com.github.Chocohead:Stitch:2edd527'
+		classpath "commons-io:commons-io:2.6"
+		classpath "com.google.guava:guava:28.0-jre"
 		classpath 'de.undercouch:gradle-download-task:3.4.3'
 		classpath 'net.fabricmc:tiny-remapper:+'
 		classpath 'com.github.Chocohead:tiny-mappings-parser:337c8b6'
@@ -58,7 +58,7 @@ configurations {
 }
 
 dependencies {
-	enigmaRuntime 'com.github.Chocohead:Stitch:7453a34'
+	enigmaRuntime 'com.github.Chocohead:Stitch:2edd527'
 	enigmaRuntime "cuchaz:enigma:0.14.1.130"
 }
 
@@ -79,14 +79,14 @@ import groovy.json.JsonSlurper
 import org.apache.commons.io.FileUtils
 import com.google.common.hash.Hashing
 import com.google.common.io.Files
+import cuchaz.enigma.command.CheckMappingsCommand
+import cuchaz.enigma.command.ConvertMappingsCommand
 import net.fabricmc.stitch.commands.CommandMergeTiny
 import net.fabricmc.stitch.commands.CommandRewriteIntermediary
 import net.fabricmc.stitch.merge.JarMerger
 import net.fabricmc.tinyremapper.OutputConsumerPath
 import net.fabricmc.tinyremapper.TinyRemapper
 import net.fabricmc.tinyremapper.TinyUtils
-import net.fabricmc.weave.CommandFindMappingErrors
-import net.fabricmc.weave.CommandTinyify
 import net.fabricmc.mappings.ClassEntry
 import net.fabricmc.mappings.MethodEntry
 import net.fabricmc.mappings.FieldEntry
@@ -100,7 +100,7 @@ import java.util.zip.GZIPOutputStream
 
 boolean validateChecksum(File file, String checksum) {
 	if (file != null) {
-		def hash = Files.hash(file, Hashing.sha1())
+		def hash = Files.asByteSource(file).hash(Hashing.sha1())
 		def builder = new StringBuilder()
 		hash.asBytes().each {
 			builder.append(Integer.toString((it & 0xFF) + 0x100, 16).substring(1))
@@ -303,33 +303,11 @@ task checkMappings {
 		logger.lifecycle(":checking mappings")
 
 		String[] args = [
-			clientJar.getAbsolutePath(),
+			mergedJar.getAbsolutePath(),
 			mappingsDir.getAbsolutePath()
 		]
 
-		new CommandFindMappingErrors().run(args)
-	}
-}
-
-task patchIntermediary(dependsOn: ["mergeJars", "downloadIntermediary"], type: FileOutput) {
-	def intermediaryTinyInput = downloadIntermediary.dest
-
-	def outputFile = new File(cacheFilesMinecraft, "${minecraft_version}-intermediary-full.tiny")
-	outputs.file(outputFile)
-	fileOutput = outputFile
-
-	outputs.upToDateWhen { return false }
-
-	doLast {
-		logger.lifecycle(":patching intermediary")
-		String[] args = [
-			clientJar.getAbsolutePath(),
-			intermediaryTinyInput.getAbsolutePath(),
-			outputFile.getAbsolutePath(),
-			"--writeAll"
-		]
-
-		new CommandRewriteIntermediary().run(args)
+		new CheckMappingsCommand().run(args)
 	}
 }
 
@@ -348,20 +326,18 @@ task buildYarnTiny(dependsOn: "mergeJars", type: FileOutput) {
 		logger.lifecycle(":generating tiny mappings")
 
 		String[] args = [
-			clientJar.getAbsolutePath(),
+			"enigma",
 			mappingsDir.getAbsolutePath(),
-			yarnTiny.getAbsolutePath(),
-			"official",
-			"named"
+			"tiny:intermediary:named",
+			yarnTiny.getAbsolutePath()
 		]
 
-		new CommandTinyify().run(args)
+		new ConvertMappingsCommand().run(args)
 	}
 }
 
-task mergeTiny(dependsOn: ["buildYarnTiny", "patchIntermediary"], type: FileOutput) {
+task mergeTiny(dependsOn: [downloadIntermediary, buildYarnTiny], type: FileOutput) {
 	def yarnTinyInput = buildYarnTiny.fileOutput
-	def intermediaryTinyInput = patchIntermediary.fileOutput
 
 	def outputFile = new File(tempDir, "mappings.tiny")
 	outputs.file(outputFile)
@@ -372,11 +348,9 @@ task mergeTiny(dependsOn: ["buildYarnTiny", "patchIntermediary"], type: FileOutp
 	doLast {
 		logger.lifecycle(":merging yarn and intermediary")
 		String[] args = [
+			downloadIntermediary.dest.getAbsolutePath(),
 			yarnTinyInput.getAbsolutePath(),
-			intermediaryTinyInput.getAbsolutePath(),
-			outputFile.getAbsolutePath(),
-			"intermediary",
-			"official"
+			outputFile.getAbsolutePath()
 		]
 
 		new CommandMergeTiny().run(args)
